templates/mediawiki-dev_template.yaml
---
# Source: mediawiki-dev/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mediawiki-dev-release-name
  labels:
    app: mediawiki-dev
    chart: mediawiki-dev-0.4.4
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: mediawiki-dev
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 9102
        protocol: TCP
---
# Source: mediawiki-dev/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediawiki-dev-release-name
  labels:
    app: mediawiki-dev
    chart: mediawiki-dev-0.4.4
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: mediawiki-dev
    release: release-name
    routed_via: release-name
  ports:

    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
---
# Source: mediawiki-dev/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediawiki-dev-release-name
  labels:
    app: mediawiki-dev
    chart: mediawiki-dev-0.4.4
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: mediawiki-dev
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: mediawiki-dev
        release: release-name
        routed_via: release-name
      annotations:
        checksum/secrets: ca011ddbd17eb0b49f6b46d986b7424ed137e6d874ef8b00cdce7ab0b3cce1c2
        prometheus.io/port: "9102"
        prometheus.io/scrape: "true"
    spec:
      containers:
        # The main application container
        - name: mediawiki-dev-release-name
          image: "docker-registry.wikimedia.org/wikimedia/mediawiki-core:dev"
          imagePullPolicy: IfNotPresent
          args: ["  "]
          ports:
          livenessProbe:
            tcpSocket:
              port: 8080
          readinessProbe:
            httpGet:
              path: /index.php/Special:BlankPage
              port: 8080
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 1.2
              memory: 500Mi
          volumeMounts:
            - name: secret-volume
              mountPath: /var/config
              readOnly: false
      volumes:
        - name: secret-volume
          secret:
            secretName: mediawiki-dev-release-name-secret-files
            items:
            - key: LocalSettings.php
              path: LocalSettings.php
              mode: 0555
            - key: setup.sh
              path: setup.sh
              mode: 0555
---
# Source: mediawiki-dev/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'mediawiki-dev-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'mediawiki-dev-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(MEDIAWIKI_DEV_RELEASE_NAME_SERVICE_HOST)', 'http://mediawiki-dev-release-name:80']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
